<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/slate_gray"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                style="@style/PrimaryTitle_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:justificationMode="inter_word"
                android:text="False accusation."
                android:textStyle="bold" />


            <TextView
                style="@style/PrimaryTitle_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:justificationMode="inter_word"
                android:text="Immanuel Nils did not kill the mayor."
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/second_incorrect_in_1"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/second_incorrect_in_2"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:justificationMode="inter_word"
                android:text="@string/incorrect_3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/SecondaryButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="160dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_curved_corners"
                android:onClick="onClickTryAgainBtn"
                android:text="TRY AGAIN"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>