<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/slate_gray"
        app:titleTextColor="@color/deep_orange"
        android:elevation="4dp"
        app:theme="@style/ToolbarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <ImageView
                android:id="@+id/backarrow"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:onClick="onClickBackArrow"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/audio_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_speaker_enabled" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/slate_gray" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/black">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pic"
                    android:layout_centerHorizontal="true"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="10dp"
                    android:elevation="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:src="@drawable/major"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/evidence_title"
                    style="@style/PrimaryTitle_small"
                    android:layout_below="@id/pic"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="The Town Hall"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/loc_desc1"
                    android:lineSpacingExtra="2dp"
                    android:justificationMode="inter_word"
                    android:layout_below="@id/evidence_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/mayor_office_desc"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/loc_desc2"
                    android:lineSpacingExtra="2dp"
                    android:justificationMode="inter_word"
                    android:layout_below="@id/loc_desc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/mayor_office_question"
                    android:textColor="@color/white" />

            </RelativeLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/solve_question_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pick_your_choice_title"
                    style="@style/PrimaryTitle_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Pick your choice"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/deep_orange"
                        android:text="@string/city_hall_answer1"
                        />


                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/deep_orange"
                        android:text="@string/city_hall_answer2"
                        />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/deep_orange"
                        android:text="@string/city_hall_answer3"
                        />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:buttonTint="@color/deep_orange"
                        android:text="@string/city_hall_answer4"
                        />

                </RadioGroup>


                <androidx.appcompat.widget.AppCompatButton
                    style="@style/SecondaryButton"
                    android:id="@+id/btn_solve_evidence1"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_curved_corners"
                    android:text="solve"
                    android:textStyle="bold"
                    android:onClick="Solve"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/success_msg_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/PrimaryTitle_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="New Evidence"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/PrimaryTitle_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="Gooseberries:"
                    android:textStyle="bold"/>

                <TextView
                    android:lineSpacingExtra="2dp"
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/city_hall_evidence1"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>



