<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28343B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                style="@style/PrimaryTitle_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:justificationMode="inter_word"
                android:text="CONGRATULATIONS!"
                android:textStyle="bold" />


            <TextView
                style="@style/PrimaryTitle_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:justificationMode="inter_word"
                android:text="You have solved the case, detective."
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/second_correct_1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/second_correct_2"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                android:elevation="10dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/arrested_ct" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/second_correct_3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <Button
                    style="@style/SecondaryButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/shape"
                    android:onClick="onClickGoBack"
                    android:text="Go Back"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</ScrollView>