<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/slate_gray"
            android:orientation="vertical">

            <TextView
                style="@style/PrimaryTitle_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:justificationMode="inter_word"
                android:text="You’ve got it ritght!"
                android:textStyle="bold" />


            <TextView
                style="@style/PrimaryTitle_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:justificationMode="inter_word"
                android:text="Very good demonstration of your detective skills."
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/first_correct_1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_margin="35dp"
                android:elevation="10dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/prison_ap" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/first_correct_2"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/first_correct_3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/SecondaryButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_curved_corners"
                android:onClick="onClickClose"
                android:text="CLOSE"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>